--- a/templates/home.html
+++ b/templates/home.html
@@ -5,8 +5,12 @@
     <meta charset = "UTF-8">
     <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
     <title>Image Classifier (Model P1Version_0.1)</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
-    
+
+    <!-- For the Flask File of mine -->
+    <!-- <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">  -->
+
+    <!-- For HTML file solely -->
+    <link rel="stylesheet" href="static/styles.css" >   
   </head>
   <body>
     <div class = "container">
