--- a/templates/result.html
+++ b/templates/result.html
@@ -1,17 +1,24 @@
-<!-- <!DOCTYPE html>
-<html lang = "en">
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Classification Result</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
-    
+
+    <!-- For the Flask File of mine -->
+    <!-- <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}"> -->
+
+    <!-- For HTML file solely -->
+    <link rel="stylesheet" href="../static/styles.css" >   
+
+
+
   </head>
 
   <body>
-    <div class = "container">
+    <div class="container">
       <h1>Classification Result</h1>
+      
       <table>
         <thead>
           <tr>
@@ -21,15 +28,16 @@
         </thead>
 
         <tbody>
-          {% for percentage,class_name in zip(percentages,class_names) %}
+          {% for percentage, class_name in zip(percentages, class_names) %}
           <tr>
-            <td>{{class_name}}</td>
-            <td>{{percentage}}</td>
+            <td>{{ class_name }}</td>
+            <td>{{ percentage }}%</td> 
           </tr>
           {% endfor %}
         </tbody>
       </table>
-      <a href = "/">Upload another Image</a>
+
+      <a href="/">Upload another Image</a>
     </div>
   </body>
-</html> -->
+</html>
